[package]
name = "brightness"
version = "0.1.0"
edition = "2021"

[dependencies]
ddc-hi = "0.4.1"
clap = { version = "4.5.15", features = ["derive"] }

[dev-dependencies]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
